# language-learning-generator

./: .gitignore  Polish-English-pipe.txt  README.md  professions.html  profile-overrides-shilpa-stonex.json  pronunciation-overrides.example.json  pyproject.toml
content/: README.md  common-english-german.json  common-english-hindi.json  common-language-site.json  monika-address-work-qa.txt  my-india-family-qa.txt  urzad-basic-responses-qa.txt  urzad-interview-qa.txt  urzad-polish-culture-qa.txt
output-common-language-site/: catalog-data.js  catalog.json  index.html
output-common-language-site/german-english-audio/: manifest-data.js  manifest.json
output-common-language-site/hindi-english-audio/: dashboard.html  manifest-data.js  manifest.json
output-common-language-site/polish-english-audio/: manifest-data.js  manifest.json
output-demo-pack/: dashboard.html  index.html  manifest-data.js  manifest.json
output-monika-pack/: manifest-data.js  manifest.json
output-my-india-family-pack/: dashboard.html  manifest-data.js  manifest.json
output-urzad-basic-pack/: manifest-data.js  manifest.json
output-urzad-culture-pack/: manifest-data.js  manifest.json
output-urzad-pack/: manifest-data.js  manifest.json
profiles/: README.md  shilpa-stonex.json
pronunciation/: README.md
pronunciation/examples/: pl-PL.json
src/language_learning_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/language_learning_tool/: __init__.py  cli.py  dashboard.py  parser.py  site.py  tts.py
tests/: test_generic_pipeline.py  test_parser.py
(+9 files in other folders)
